Rewrote InfoCurricularCourse as a wrapper around CurricularCourse.